# subterfuge_calculator

./: Cargo.toml  README.md
src/: calculator_test.rs  main.rs  odd_calculator.rs  plotter.rs
src/odd_calculator/: calculator.rs  calculator_logger.rs  calculator_test.rs
