[package]
name = "subterfuge_cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
rayon = "1.9.0"
regex = "1.10.3"

[profile.release]
debug = true
